# ecos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260711_01_create_session_tables.py  (+15 more)
backend/tests/: test_ai_debate_engine.py  test_ai_decision_support_engine.py  test_ai_reasoning_engine.py  test_ai_war_engine.py  test_cognitive_outbox.py  test_cognitive_planner_engine.py  test_context_engine.py  test_context_models.py  test_core_infrastructure.py  test_debate_models.py  test_decision_models.py  test_domain_models.py  test_events_models.py  test_execution_layer.py  test_governance_engine.py  test_governed_approval_execution_api.py  test_health.py  test_knowledge_graph.py  test_learning_engine.py  test_learning_loop.py  test_memory_models.py  test_observability_infrastructure.py  test_observation_engine.py  test_openai_provider.py  test_operational_api.py  test_operational_persistence.py  test_orchestrator_engine.py  test_orchestrator_models.py  test_planner_models.py  test_postgres_cognitive_outbox.py  test_postgres_execution_result_repository.py  test_postgres_memory_repository.py  test_postgres_observation_learning_repositories.py  test_postgres_session_repository.py  test_providers_models.py  test_reasoning_models.py  test_release_candidate_controls.py  test_runtime_checkpoint_persistence.py  test_runtime_pipeline.py  test_runtime_start_claim_leases.py  (+5 more)
(+195 files in other folders)
