[project]
name = "ecos-backend"
version = "0.1.0"
description = "Initial FastAPI backend for ECOS."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
